<resources>
    <string name="app_name">DramaMore</string>
    <string name="s_follow">追剧</string>
    <string name="s_recommend">推荐</string>
    <string name="s_home">首页</string>
    <string name="s_eps">集</string>
    <string name="s_finish">完结</string>
    <string name="s_search_short">搜索短剧</string>
    <string name="s_search">搜索</string>
    <string name="s_hot_short">热播短剧</string>
    <string name="s_more">更多</string>
    <string name="s_my_collect_shorts">我的追剧</string>
    <string name="s_saw_num">已观看到</string>
    <string name="s_mine">我的</string>
    <string name="s_dramamore">DramaMore</string>
    <string name="s_vip">会员权益</string>
    <string name="s_not_recharged">未充值</string>
    <string name="s_tip1">高清画质，抢先享受\n没有广告，畅快体验</string>
    <string name="s_tip2">精彩剧情下载本地\n新剧更新，优先享受</string>
    <string name="s_select"><![CDATA[选集 >]]></string>
    <string name="s_error">错误！</string>
    <string name="s_clear_success">清除成功！</string>
    <string name="s_play_his">观看记录</string>
    <string name="s_lang_set">语言设置</string>
    <string name="s_rate_us">评价我们</string>
    <string name="s_share_us">分享我们</string>
    <string name="s_protocol">隐私协议</string>
    <string name="s_clear">清除缓存</string>
    <string name="s_version">版本信息</string>
    <string name="s_sure">确定</string>
    <string name="s_share_title">分享给朋友</string>
    <string name="s_share_content">快来看看DramaMore：https://play.google.com/store/apps/details?id=%1$s</string>

    <string name="s_zh_hans">简体中文</string>
    <string name="s_zh_hant">繁体中文</string>
    <string name="s_en">英语</string>
    <string name="s_vi">越南语</string>
    <string name="s_in">印尼语</string>
    <string name="s_th">泰语</string>
    <string name="s_ja">日语</string>
    <string name="s_ko">韩语</string>
    <string name="s_pt">葡萄牙语</string>
    <string name="s_ar">阿拉伯语</string>
    <string name="s_most">收藏最多</string>
    <string name="s_voice_drama">配音剧</string>
    <string name="s_cartoon">动漫短剧</string>
    <string name="s_rate_dialog_title">评价我们</string>
    <string name="s_rate_dialog_subtitle">“为此观剧打个分吧”</string>
    <string name="s_rate_label_1">很不满意</string>
    <string name="s_rate_label_2">不满意</string>
    <string name="s_rate_label_3">一般</string>
    <string name="s_rate_label_4">满意</string>
    <string name="s_rate_label_5">非常满意</string>
    <string name="s_rate_feedback_hint">输入您想反馈的问题...</string>
    <string name="s_rate_submit">提交评价</string>
    <string name="s_rate_submit_success">感谢你的反馈</string>
</resources>
