<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mine_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/s_mine"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/s_dramamore"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/buy_bg"
            android:visibility="invisible"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_vip"
                android:textColor="#3E1D04"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/s_not_recharged"
                android:textColor="#3E1D04"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/s_tip1"
                android:textColor="#3E1D04"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="@string/s_tip2"
                android:textColor="#3E1D04"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:background="#FF1F1918"
            android:paddingVertical="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_hisotry"
                android:drawablePadding="10dp"
                android:text="@string/s_play_his"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:drawableEnd="@drawable/ic_more"
                android:drawablePadding="10dp"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_his"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <include
                layout="@layout/item_mine_his_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <include
                layout="@layout/item_mine_his_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1" />

            <include
                layout="@layout/item_mine_his_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:background="#FF1F1918"
            android:paddingVertical="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lang"
                android:drawablePadding="10dp"
                android:text="@string/s_lang_set"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:drawableEnd="@drawable/ic_more"
                android:drawablePadding="10dp"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_protocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:background="#FF1F1918"
            android:paddingVertical="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_protocol"
                android:drawablePadding="10dp"
                android:text="@string/s_protocol"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:drawableEnd="@drawable/ic_more"
                android:drawablePadding="10dp"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:background="#FF1F1918"
            android:paddingVertical="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clear"
                android:drawablePadding="10dp"
                android:text="@string/s_clear"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:drawableEnd="@drawable/ic_more"
                android:drawablePadding="10dp"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:background="#FF1F1918"
            android:paddingVertical="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_protocol"
                android:drawablePadding="10dp"
                android:text="@string/s_version"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textColor="@android:color/white" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>