<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round_search"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:text="@string/s_search_short"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:text="@string/s_search"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/bannerPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/indicatorLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:drawableLeft="@drawable/me_p"
            android:drawablePadding="10dp"
            android:text=""
            android:textColor="@android:color/white"
            android:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_hot"
            android:drawablePadding="10dp"
            android:text="@string/s_hot_short"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_hot_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:drawableEnd="@drawable/ic_more"
            android:drawablePadding="10dp"
            android:text="@string/s_more"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <include
            layout="@layout/item_card_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include
            layout="@layout/item_card_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1" />

        <include
            layout="@layout/item_card_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_recommend_list"
            android:drawablePadding="10dp"
            android:text="@string/s_recommend"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:drawableEnd="@drawable/ic_more"
            android:drawablePadding="10dp"
            android:text="@string/s_more"
            android:textColor="@android:color/white"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>